--- a/docker/gitlab-content-ci/Dockerfile
+++ b/docker/gitlab-content-ci/Dockerfile
@@ -1,48 +1,39 @@
 FROM demisto/python3-deb:3.9.1.14969
 
-RUN apt-get update
+COPY requirements.txt .
 
-RUN apt-get install -y curl jq unzip openssh-client gcc libffi-dev libssl-dev git zip netcat wget python2 python-pip
-
-# Currently sh is linked to dash, linking it to /bin/bash instead.
-RUN rm /bin/sh && ln -s /bin/bash /bin/sh
-
-# Installing nvm, npm and node.js.
 ENV NODE_VERSION 12.18.4
-RUN \
-    curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash \
-    && export NVM_DIR="/root/.nvm" \
-    && export NODE_VERSION="12.18.4" \
-    && . $NVM_DIR/nvm.sh \
-    && nvm install $NODE_VERSION \
-    && nvm alias default $NODE_VERSION \
-    && nvm use default
-
 ENV NVM_DIR /root/.nvm
 ENV PATH $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
-COPY requirements.txt .
-
-RUN pip install --no-cache-dir -r requirements.txt
-
-# Installing the gsutil.
-RUN  apt-get update -y \
-  && apt-get install apt-transport-https ca-certificates gnupg=2.2.12-1+deb10u1 gpgv=2.2.12-1+deb10u1 -y --allow-downgrades\
-  && echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" |  tee -a /etc/apt/sources.list.d/google-cloud-sdk.list \
-  && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - \
-  &&  apt-get update &&  apt-get install google-cloud-sdk -y\
-  && gcloud --version \
-  && gsutil --version
-
-# Installing goenv
-RUN git clone https://github.com/syndbg/goenv.git ~/.goenv \
-  && echo 'export GOENV_ROOT="$HOME/.goenv"' >> ~/.bashrc \
-  && echo 'export PATH="$GOENV_ROOT/bin:$PATH"' >> ~/.bashrc \
-  && echo 'eval "$(goenv init -)"' >> ~/.bashrc \
-  && echo 'export PATH="$GOROOT/bin:$PATH"' >> ~/.bashrc \
-  && echo 'export PATH="$PATH:$GOPATH/bin"' >> ~/.bashrc \
-  && source ~/.bashrc \
-  && goenv install 1.13.8 \
-  && goenv global 1.13.8 \
-  && source ~/.bashrc \
-  && curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.40.1
+RUN apt-get update -y \
+    && apt-get install -y curl jq unzip openssh-client gcc libffi-dev libssl-dev git zip netcat wget python2 python-pip \
+    # Currently sh is linked to dash, linking it to /bin/bash instead.
+    && rm /bin/sh && ln -s /bin/bash /bin/sh \
+    # Installing nvm, npm and node.js.
+    && curl https://raw.githubusercontent.com/nvm-sh/nvm/v0.38.0/install.sh | bash \
+    && . $NVM_DIR/nvm.sh \
+    && nvm install $NODE_VERSION \
+    && nvm alias default $NODE_VERSION \
+    && nvm use default \
+    # Install requirements
+    && pip install --no-cache-dir -r requirements.txt \
+    # Installing the gsutil.
+    && apt-get install apt-transport-https ca-certificates gnupg=2.2.12-1+deb10u1 gpgv=2.2.12-1+deb10u1 -y --allow-downgrades\
+    && echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" |  tee -a /etc/apt/sources.list.d/google-cloud-sdk.list \
+    && curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | apt-key --keyring /usr/share/keyrings/cloud.google.gpg add - \
+    && apt-get install google-cloud-sdk -y\
+    && gcloud --version \
+    && gsutil --version \
+    # Installing goenv
+    && git clone https://github.com/syndbg/goenv.git ~/.goenv \
+    && echo 'export GOENV_ROOT="$HOME/.goenv"' >> ~/.bashrc \
+    && echo 'export PATH="$GOENV_ROOT/bin:$PATH"' >> ~/.bashrc \
+    && echo 'eval "$(goenv init -)"' >> ~/.bashrc \
+    && echo 'export PATH="$GOROOT/bin:$PATH"' >> ~/.bashrc \
+    && echo 'export PATH="$PATH:$GOPATH/bin"' >> ~/.bashrc \
+    && source ~/.bashrc \
+    && goenv install 1.13.8 \
+    && goenv global 1.13.8 \
+    && source ~/.bashrc \
+    && curl -sfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.40.1
