--- a/docker/ansible-runner/Dockerfile
+++ b/docker/ansible-runner/Dockerfile
@@ -1,5 +1,5 @@
 
-FROM demisto/python3-deb:3.11.9.104509
+FROM demisto/python3-deb:3.10.14.101214
 
 COPY requirements.txt .
 
@@ -12,6 +12,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
   openssh-client \
 && pip install --no-cache-dir -r requirements.txt \
 && pip install https://github.com/vmware/vsphere-automation-sdk-python/archive/refs/tags/v7.0.3.2.tar.gz \
+&& pip3 install azure-storage-blob --upgrade \
+&& pip install azure-storage-blob --upgrade \
 && apt-get purge -y --auto-remove \
   gcc \
   python3-dev \
