--- a/docker/python_pancloud_v2/Pipfile
+++ b/docker/python_pancloud_v2/Pipfile
@@ -7,7 +7,7 @@ verify_ssl = true
 
 [packages]
 cryptography = "*"
-pancloud = "==2.0.0a2"
+pancloud = "==2.0.0b1"
 
 [requires]
 python_version = "3.11"
