--- a/docker/group-ib-integrations/Pipfile
+++ b/docker/group-ib-integrations/Pipfile
@@ -4,9 +4,9 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-cyberintegrations = "==0.7.3"
+cyberintegrations = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.11"
+python_version = "3.10"
