--- a/docker/py3-native/pyproject.toml
+++ b/docker/py3-native/pyproject.toml
@@ -87,6 +87,7 @@ PyCryptodome = "*"
 PyPDF2 = "*"
 yara-python = "^4.5.1"
 plyara = "^2.1.1"
+json2html = "*"
 
 [build-system]
 requires = ["poetry-core"]
