--- a/docker/py3-tools-ubi/Dockerfile
+++ b/docker/py3-tools-ubi/Dockerfile
@@ -1,5 +1,5 @@
-# Last modified: 2024-07-18T00:00:00.000000+00:00
-FROM demisto/python3-ubi:3.11.9.103844
+# Last modified: 2024-07-30T00:00:00.000000+00:00
+FROM demisto/python3-ubi:3.11.9.105869
 
 COPY requirements.txt .
 
@@ -7,5 +7,7 @@ RUN dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git && \
         pip install --no-cache-dir -r requirements.txt && \
         dnf remove -y python3-devel gcc gcc-c++ make wget git platform-python-pip && \
         dnf clean all && \
-        rm -rf /var/cache/dnf
+        rm -rf /var/cache/dnf && \
+        pip uninstall pyminizip -y
+
 
