--- a/docker/py3-tools-ubi/Dockerfile
+++ b/docker/py3-tools-ubi/Dockerfile
@@ -7,7 +7,5 @@ RUN dnf install -y --nodocs python3-devel gcc gcc-c++ make wget git && \
         pip install --no-cache-dir -r requirements.txt && \
         dnf remove -y python3-devel gcc gcc-c++ make wget git platform-python-pip && \
         dnf clean all && \
-        rm -rf /var/cache/dnf && \
-        pip uninstall pyminizip -y
-
+        rm -rf /var/cache/dnf
 
