--- a/docker/python3-ubi/Dockerfile
+++ b/docker/python3-ubi/Dockerfile
@@ -101,15 +101,8 @@ Options = UnsafeLegacyRenegotiation\n' > /tmp/ssl.cnf \
 RUN groupadd -g 4000 demisto && \
     useradd -u 4000 -g demisto demisto -s /bin/sh && \
     dnf remove python3-setuptools -y && \
-    pip install --upgrade setuptools
-
-RUN rpm -e --nodeps python3-setuptools-wheel
-
-# remove python3.9
-RUN rm -f -r /usr/include/python3.9 && \
-    rm -f -r /usr/bin/python3.9 && \
-    rm -f -r /usr/lib/python3.9 && \
-    rm -f -r /usr/lib64/python3.9
+    pip install --upgrade setuptools && \
+    rpm -e --nodeps python3-setuptools-wheel
 
 
 # when changing it make sure to change also PYTHON_VERSION_TO_INSTALL env var in line 23
