--- a/docker/python3-9-deb/Dockerfile
+++ b/docker/python3-9-deb/Dockerfile
@@ -22,9 +22,9 @@ COPY requirements.txt .
 #Install tools for building binary deps (will be reomved later on)
 RUN apt-get update && apt-get install -y --no-install-recommends \
   gcc \
-  python3.9-dev \ 
+  python3.9-dev \
   build-essential \
-&& pip install --no-cache-dir -r requirements.txt \
+&& pip install --upgrade pip setuptools && pip install --no-cache-dir -r requirements.txt \
 && apt-get purge -y --auto-remove \
   gcc \
   python3.9-dev \
