--- a/docker/mlurlphishing/pyproject.toml
+++ b/docker/mlurlphishing/pyproject.toml
@@ -7,7 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.9"
-tldextract = "==3.1.0" 
+tldextract = "==3.1.0"
 more-itertools = "*"
 defusedxml = "*"
 opencv-python = "==4.5.5.64"  # using previous version until fixed https://github.com/opencv/opencv-python/issues/676
@@ -30,7 +30,7 @@ joblib = "==1.2.0"
 kiwisolver = "==1.4.2"
 matplotlib = "==3.5.2"
 olefile = "==0.46"
-packaging = "==21.3"
+packaging = ">=22.0"
 pandas = "==1.3.5"
 Pillow = "==10.2.0"
 plotly = "==5.8.0"
